[package]
name = "stylus-hello-world-minimal"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.4.2"
mini-alloc = "0.4.2"
arrayref = "0.3.7"

[dependencies.p256]
version = "0.13.2"
default-features = false
features = ["arithmetic", "ecdsa"]

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"

[workspace]
